--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "bugs": {
     "url": "https://github.com/hotwired/turbo-rails/issues"
   },
-  "homepage": "https://github.com/hotwired/turbo-rails"
+  "homepage": "https://github.com/hotwired/turbo-rails",
+  "publishConfig": {
+    "access": "public"
+  }
 }
