--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hotwired/turbo-rails",
-  "version": "7.0.0-beta.1",
+  "version": "7.0.0-beta.2",
   "description": "The speed of a single-page web application without having to write any JavaScript",
   "module": "app/javascript/turbo/index.js",
   "main": "app/assets/javascripts/turbo.js",
@@ -8,7 +8,9 @@
     "app/javascript/turbo"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prerelease": "yarn build && git --no-pager diff && echo && npm pack --dry-run && echo && read -n 1 -p \"Look OK? Press any key to publish and commit v$npm_package_version\" && echo",
+    "release": "npm publish && git commit -am \"$npm_package_name v$npm_package_version\" && git push"
   },
   "dependencies": {
     "@hotwired/turbo": "^7.0.0-beta.1",
