--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,12 @@ jobs:
           - "3.0"
         continue-on-error: [ false ]
 
-        include:
-          - ruby-version: head
-            continue-on-error: true
+        # Disabled until minitest relaxes its upper bound: https://github.com/seattlerb/minitest/pull/862
+        # > minitest-5.14.2 requires ruby version < 3.1, >= 2.2, which is incompatible with the current version, ruby 3.1.0p-1
+        #
+        # include:
+        #   - ruby-version: head
+        #     continue-on-error: true
 
     name: ${{ format('Tests (Ruby {0})', matrix.ruby-version) }}
     runs-on: ubuntu-latest
