--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,7 @@ jobs:
         run: |
           bin/rails db:test:prepare
           bin/test test/**/*_test.rb
+      - name: Fail when generated changes are not checked-in
+        run: |
+          git update-index --refresh
+          git diff-index --quiet HEAD --
