--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,23 @@
 name: CI
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 jobs:
   tests:
     strategy:
+      fail-fast: false
       matrix:
-        ruby-version:
-          - "2.7"
-          - "3.0"
-        rails-version:
-          - "6.1"
-          - "7.0"
-          - "main"
+        rails: [ "6.1", "7.0" ]
+        ruby: [ "2.7", "3.0", "3.1", "3.2" ]
+        allow-fail: [ false ]
         include:
-          - { ruby-version: "3.2", rails-version: "7.0" }
-
-        # Disabled until minitest relaxes its upper bound: https://github.com/seattlerb/minitest/pull/862
-        # > minitest-5.14.2 requires ruby version < 3.1, >= 2.2, which is incompatible with the current version, ruby 3.1.0p-1
-        #
-        # include:
-        #   - ruby-version: head
-        #     continue-on-error: true
+          - { ruby: "2.7",  rails: "main", allow-fail: true }
+          - { ruby: "3.2",  rails: "main", allow-fail: true }
+          - { ruby: "head", rails: "main", allow-fail: true }
 
     env:
-      RAILS_VERSION: "${{ matrix.rails-version }}"
+      RAILS_VERSION: "${{ matrix.rails }}"
 
-    name: ${{ format('Tests (Ruby {0}, Rails {1})', matrix.ruby-version, matrix.rails-version) }}
+    name: ${{ format('Tests (Ruby {0}, Rails {1})', matrix.ruby, matrix.rails) }}
     runs-on: ubuntu-latest
-    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v1
@@ -34,13 +25,20 @@ jobs:
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby-version }}
+          ruby-version: ${{ matrix.ruby }}
           rubygems: latest
           bundler-cache: true
 
       - name: Run tests
-        run: |
-          bin/test test/**/*_test.rb
+        id: test
+        run: bundle exec rake TESTOPT=-vdc
+        continue-on-error: ${{ matrix.allow-fail || false }}
+
+      - name: >-
+          Test outcome: ${{ steps.test.outcome }}
+        # every step must define a `uses` or `run` key
+        run: echo NOOP
+
       - name: Fail when generated changes are not checked-in
         run: |
           git update-index --refresh
