--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
     "rollup": "^2.35.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "terser": "^5.22.0"
   },
   "license": "MIT",
   "author": "Basecamp, LLC",
