--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rails: [ "6.1", "7.0" ]
+        rails: [ "6.1", "7.0", "7.1" ]
         ruby: [ "2.7", "3.0", "3.1", "3.2" ]
         allow-fail: [ false ]
         include:
           - { ruby: "2.7",  rails: "main", allow-fail: true }
           - { ruby: "3.2",  rails: "main", allow-fail: true }
-          - { ruby: "head", rails: "main", allow-fail: true }
 
     env:
       RAILS_VERSION: "${{ matrix.rails }}"
